[project]
name = "superresolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.2",
    "wandb>=0.27.2",
]

[project.optional-dependencies]
# Only needed for latent diffusion training with --use_vae
vae = ["diffusers>=0.31.0"]
